Updated Hero Content

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
                 <div class="logo"><a href="#">Full Stack Developer</a></div>
                 <ul class="nav-links">
                     <li class="nav-link"><a href="./index.html">
-                        Home</a></li>
+                            Home</a></li>
                     <li class="nav-link"><a href="https://github.com/NafanJ">
-                        Github</a></li>
+                            Github</a></li>
                     <li class="nav-link"><a href="https://www.youtube.com/watch?v=VArAc3tq2yo">
-                        About</a></li>
+                            About</a></li>
                 </ul>
             </nav>
             <div class="content">
                 <div class="main">
-                    <h2>Hey! 🖖,<br>It's Nathan</h2>
-                    <p>Welcome to my programming portfolio! I'm Nathan, a coding enthusiast. This is where I
-                        showcase my digital creations. From web development to automation, I've got it all. Explore
-                        my work and join the coding fun!</p>
+                    <h2>Hey! 👋,<br>I'm Nathan</h2>
+                    <p>Welcome to my coding playground! I'm a passionate coder who loves building digital
+                        solutions. In this corner of the web, you'll find a collection of my work. Dive in, have a look around, and let's have
+                        some coding fun together!</p>
                     <button>Get Started</button>
                 </div>
                 <div class="image-wrapper">
